OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/FSL_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FSL Settings</label>
</CustomObject>