OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Availability_Period__c.field-meta.xml
<CustomField>
    <fullName>Availability_Period__c</fullName>
    <description>When assigning a new work order that has the “Assign to Dealer Immediately“ checked, the assignment process will search for availability in the next x days [PVFSL-190]</description>
    <label>Availability Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>