OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Community_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_Site_URL__c</fullName>
    <label>Community Site URL</label>
    <type>Url</type>
</CustomField>