OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Days_Before_Deleting_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Deleting_Shifts__c</fullName>
    <description>All shifts that have dates more than the selected value will be deleted once a day. (PVFSL-186)</description>
    <inlineHelpText>All shifts that have dates more than the selected value will be deleted once a day.</inlineHelpText>
    <label>Days Before Deleting Shifts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>