OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/DCC_SelfService_URL__c.field-meta.xml
<CustomField>
    <fullName>DCC_SelfService_URL__c</fullName>
    <description>URL of the DCC public self service site (PVFSL-241)</description>
    <inlineHelpText>URL of the DCC public self service site</inlineHelpText>
    <label>DCC_SelfService_URL</label>
    <type>Url</type>
</CustomField>