OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/DCC_Typeform_URL__c.field-meta.xml
<CustomField>
    <fullName>DCC_Typeform_URL__c</fullName>
    <description>URL for the DCC TypeForm form for confirmation (PVFSL-241)</description>
    <inlineHelpText>URL for the DCC TypeForm form for confirmation</inlineHelpText>
    <label>DCC_Typeform_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>