OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Default_Message_Log_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Message_Log_Contact_Id__c</fullName>
    <label>Default Message Log Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>