OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Default_Scheduling_Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Scheduling_Policy_Name__c</fullName>
    <description>The base scheduling policy name used as the default for web service operations, not associated with any specific vendor. (PVFSL-191)</description>
    <inlineHelpText>The base scheduling policy name used as the default for web service operations, not associated with any specific vendor.</inlineHelpText>
    <label>Default Scheduling Policy Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>