OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <description>This is the url for the images in the system, used by the completion form process.</description>
    <label>Document URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>