OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Internal_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Internal_Site_URL__c</fullName>
    <label>Internal Site URL</label>
    <type>Url</type>
</CustomField>