OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Messaging_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Channel_Name__c</fullName>
    <description>This field contains the unique environment name for the messaging channel. Used in the Self scheduling with Duration flow. (PVFSL-104)</description>
    <inlineHelpText>This field contains the unique environment name for the messaging channel. Used in the Self scheduling with Duration flow.</inlineHelpText>
    <label>Messaging Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>