OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Self_Schedule_Guest_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Self_Schedule_Guest_User_Name__c</fullName>
    <description>Field used to identify the self scheduling public page guest user name. Orders created by this user will be deleted by the FSL_DeleteSelfServiceDummyOrders_Batch class. (PVFSL-594)</description>
    <inlineHelpText>Field used to identify the self scheduling public page guest user name. Orders created by this user will be deleted by the FSL_DeleteSelfServiceDummyOrders_Batch class.</inlineHelpText>
    <label>Self Schedule Guest User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>