OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Self_Scheduling_min_number_of_hours__c.field-meta.xml
<CustomField>
    <fullName>Self_Scheduling_min_number_of_hours__c</fullName>
    <description>This field is used in the custom screen for self-scheduling. The customer is not going to be able to schedule an appointment in less than the selected value.</description>
    <label>Self-Scheduling min number of hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>