OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Self_Scheduling_Notification_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Self_Scheduling_Notification_Threshold__c</fullName>
    <description>The maximum number of days the self scheduling notification will be sent for a Service Appointment. After this threshold, a dealer will be assigned to the Service Appointment. Used in the “Daily Self Scheduling” flow. (PVFSL-782)</description>
    <label>Self Scheduling Notification Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>