OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Shift_Weeks_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Shift_Weeks_In_Advance__c</fullName>
    <description>How many weeks will the automation create in advance? (PVFSL-132)</description>
    <inlineHelpText>How many weeks will the automation create in advance?</inlineHelpText>
    <label>Shift Weeks In Advance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>