OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Shifts_First_Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Shifts_First_Day_of_the_Week__c</fullName>
    <description>First day of the week, every week, the process that creates shifts will run on this day. (0 = Sunday, 1 = Monday, 2 = Tuesday, etc) (PVFSL-132)</description>
    <inlineHelpText>First day of the week, every week, the process that creates shifts will run on this day. (0 = Sunday, 1 = Monday, 2 = Tuesday, etc)</inlineHelpText>
    <label>Shifts First Day of the Week</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>