OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Technician_Location_URL__c.field-meta.xml
<CustomField>
    <fullName>Technician_Location_URL__c</fullName>
    <label>Technician Location URL</label>
    <type>Url</type>
</CustomField>