OnboardingV2Minimal/force-app/main/default/objects/FSL_Settings__c/fields/Warranty_Period__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Period__c</fullName>
    <description>Number of days for the warranty period. This is used to display if an order is under the warranty period or not. (PVFSL-53)</description>
    <inlineHelpText>Number of days for the warranty period. This is used to display if an order is under the warranty period or not.</inlineHelpText>
    <label>Warranty Period</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>